--- a/artsenic.html
+++ b/artsenic.html
@@ -57,7 +57,7 @@
                     <li><a class="link" href="about.html">A propos</a></li>
                     <li><a class="link" href="tableaux.html">Tableaux</a></li>
                     <li><a class="link" href="artsenic.html">Artsenic</a></li>
-                    <li><a class="link" href="projets.html">Projets</a></li>
+                    <li><a class="link" href="news.html">News</a></li>
                     <li><a class="link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
