--- a/index.html
+++ b/index.html
@@ -54,13 +54,41 @@
                 <h1>Annick</h1>
             </div>
             <div class="n-nav">
-                <ul>
-                    <li><a class="link" href="index.html">Accueil</a></li>
-                    <li><a class="link" href="about.html">A propos</a></li>
-                    <li><a class="link" href="tableaux.html">Tableaux</a></li>
-                    <li><a class="link" href="artsenic.html">Artsenic</a></li>
-                    <li><a class="link" href="projets.html">Projets</a></li>
-                    <li><a class="link" href="contact.html">Contact</a></li>
+                <ul class="main-menu">
+                    <li class="main-li">
+                        <a class="link" href="index.html">Accueil</a>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="about.html">A propos</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a class="link" href="">Annick</a>
+                            </li>
+                            <li>
+                                <a  class="link" href="">Artsenic</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="gallerie.html">Gallerie</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a class="link" href="">Annick</a>
+                            </li>
+                            <li>
+                                <a class="link" href="">Artsenic</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="news.html">News</a>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="livredor.html">Livre d'or</a>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
             <div class="n-contact">
@@ -162,64 +190,66 @@
                 </div>
             </div>
         </section>
-        <section class="two">
-            <a href="tableaux.html">
-                <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.1s">
-                    <img src="img/gallery1.jpeg" alt="">
-                    <div class="two-text">
-                        <div class="two-title">
-                            <a href="">2020 <br>
-                            Série de tableaux</a>
+        <section>
+            <div class="two">
+                <a href="tableaux.html">
+                    <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.1s">
+                        <img src="img/gallery1.jpeg" alt="">
+                        <div class="two-text">
+                            <div class="two-title">
+                                <a href="">2020 <br>
+                                Série de tableaux</a>
+                            </div>
+                            <div class="two-fade">
+                                <a href="tableaux.html"><i class="fa-solid fa-paintbrush"></i></a>
+                            </div>
                         </div>
-                        <div class="two-fade">
-                            <a href="tableaux.html"><i class="fa-solid fa-paintbrush"></i></a>
-                        </div>
-                    </div>
                 
-                </div>
-            </a>
-            <a href="tableaux.html">
-                <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.3s">
-                    <img src="img/gallery2.jpeg" alt="">
-                    <div class="two-text">
-                        <div class="two-title">
-                            <a href="">2019 <br>
-                            Série de tableaux</a>
-                        </div>
-                        <div class="two-fade">
-                            <a href=""><i class="fa-solid fa-paintbrush"></i></a>
+                    </div>
+                </a>
+                <a href="tableaux.html">
+                    <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.3s">
+                        <img src="img/gallery2.jpeg" alt="">
+                        <div class="two-text">
+                            <div class="two-title">
+                                <a href="">2019 <br>
+                                Série de tableaux</a>
+                            </div>
+                            <div class="two-fade">
+                                <a href=""><i class="fa-solid fa-paintbrush"></i></a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-            <a href="tableaux.html">
-                <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.5s">
-                    <img src="img/gallery3.jpeg" alt="">
-                    <div class="two-text">
-                        <div class="two-title">
-                            <a href="">2015 - 2017 <br>
-                            Série de tableaux</a>
-                        </div>
-                        <div class="two-fade">
-                            <a href=""><i class="fa-solid fa-paintbrush"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="tableaux.html">
-                <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.7s">
-                    <img src="img/gallery4.jpeg" alt="">
-                    <div class="two-text">
-                        <div class="two-title">
-                            <a href="">2011 - 2015 <br>
-                            Série de tableaux</a>
-                        </div>
-                        <div class="two-fade">
-                            <a href=""><i class="fa-solid fa-paintbrush"></i></a>
+                </a>
+                <a href="tableaux.html">
+                    <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.5s">
+                        <img src="img/gallery3.jpeg" alt="">
+                        <div class="two-text">
+                            <div class="two-title">
+                                <a href="">2015 - 2017 <br>
+                                Série de tableaux</a>
+                            </div>
+                            <div class="two-fade">
+                                <a href=""><i class="fa-solid fa-paintbrush"></i></a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
+                <a href="tableaux.html">
+                    <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.7s">
+                        <img src="img/gallery4.jpeg" alt="">
+                        <div class="two-text">
+                            <div class="two-title">
+                                <a href="">2011 - 2015 <br>
+                                Série de tableaux</a>
+                            </div>
+                            <div class="two-fade">
+                                <a href=""><i class="fa-solid fa-paintbrush"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </section>
         <section class="three">
             <div class="s1-container">
@@ -237,7 +267,7 @@
                         <a href="artsenic.html">En savoir plus</a>
                     </button>
                 </div>
-                <div class="s1-imgs wow animate__fadeInUp" data-wow-delay="0.3s">
+                <div class="s1-imgs s3 wow animate__fadeInUp" data-wow-delay="0.3s">
                     <div class="s1-img3">
                         <img src="img/artsenic1.jpeg" alt="">
                     </div>
