--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,41 @@
                 <h1>Annick</h1>
             </div>
             <div class="n-nav">
-                <ul>
-                    <li><a class="link" href="index.html">Accueil</a></li>
-                    <li><a class="link" href="about.html">A propos</a></li>
-                    <li><a class="link" href="tableaux.html">Tableaux</a></li>
-                    <li><a class="link" href="artsenic.html">Artsenic</a></li>
-                    <li><a class="link" href="projets.html">Projets</a></li>
-                    <li><a class="link" href="contact.html">Contact</a></li>
+                <ul class="main-menu">
+                    <li class="main-li">
+                        <a class="link" href="index.html">Accueil</a>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="about.html">A propos</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a class="link" href="">Annick</a>
+                            </li>
+                            <li>
+                                <a  class="link" href="">Artsenic</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="gallerie.html">Gallerie</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a class="link" href="">Annick</a>
+                            </li>
+                            <li>
+                                <a class="link" href="">Artsenic</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="news.html">News</a>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="livredor.html">Livre d'or</a>
+                    </li>
+                    <li class="main-li">
+                        <a class="link" href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
             <div class="n-contact">
