--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <a class="link" href="about.html">A propos</a>
                         <ul class="sub-menu">
                             <li>
-                                <a class="link" href="">Annick</a>
+                                <a class="link" href="about.html#annick">Annick</a>
                             </li>
                             <li>
-                                <a  class="link" href="">Artsenic</a>
+                                <a  class="link" href="about.html#artsenic">Artsenic</a>
                             </li>
                         </ul>
                     </li>
@@ -185,14 +185,14 @@
                         La vie "fête" de passions, de la couleur, des instants magiques, des rencontres fortuites, des folies créatrices, des rêves accomplis, des partages d'émotions, aimer, vibrer, toucher, agir...réagir, vivre sans oublier ses rêves, se perdre sans savoir si on retrouvera son chemin, respirer à s'en époumoner, vivre chaque instant comme si c'était le dernier.
                     </p>
                     <button class="btn-1">
-                        <a href="about.html">En savoir plus</a>
+                        <a href="about.html#annick">En savoir plus</a>
                     </button>
                 </div>
             </div>
         </section>
         <section>
             <div class="two">
-                <a href="tableaux.html">
+                <a href="gallerie.html">
                     <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.1s">
                         <img src="img/gallery1.jpeg" alt="">
                         <div class="two-text">
@@ -201,13 +201,13 @@
                                 Série de tableaux</a>
                             </div>
                             <div class="two-fade">
-                                <a href="tableaux.html"><i class="fa-solid fa-paintbrush"></i></a>
+                                <a href="gallerie.html"><i class="fa-solid fa-paintbrush"></i></a>
                             </div>
                         </div>
                 
                     </div>
                 </a>
-                <a href="tableaux.html">
+                <a href="gallerie.html">
                     <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.3s">
                         <img src="img/gallery2.jpeg" alt="">
                         <div class="two-text">
@@ -216,12 +216,12 @@
                                 Série de tableaux</a>
                             </div>
                             <div class="two-fade">
-                                <a href=""><i class="fa-solid fa-paintbrush"></i></a>
+                                <a href="gallerie.html"><i class="fa-solid fa-paintbrush"></i></a>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a href="tableaux.html">
+                <a href="gallerie.html">
                     <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.5s">
                         <img src="img/gallery3.jpeg" alt="">
                         <div class="two-text">
@@ -230,12 +230,12 @@
                                 Série de tableaux</a>
                             </div>
                             <div class="two-fade">
-                                <a href=""><i class="fa-solid fa-paintbrush"></i></a>
+                                <a href="gallerie.html"><i class="fa-solid fa-paintbrush"></i></a>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a href="tableaux.html">
+                <a href="gallerie.html">
                     <div class="two-img-box wow animate__fadeInUp" data-wow-delay="0.7s">
                         <img src="img/gallery4.jpeg" alt="">
                         <div class="two-text">
@@ -244,7 +244,7 @@
                                 Série de tableaux</a>
                             </div>
                             <div class="two-fade">
-                                <a href=""><i class="fa-solid fa-paintbrush"></i></a>
+                                <a href="gallerie.html"><i class="fa-solid fa-paintbrush"></i></a>
                             </div>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                         ARTsenic voit le jour en Janvier 2020 après des mois de gestation, parce que ne rien dire, ne rien faire n'est tout simplement plus possible, parce que l'art et la culture ne peuvent être baîllonnés. ARTsenic n'est nullement une réponse au Covid, mais depuis bien longtemps cette envie s'est transformé en besoin d'agir, de réagir fasse à l'absurde, à l'ineptie, à la bêtise humaine...à ma façon, avec mes moyens, modestement, simplement. Aucun(e) peinture, sculpture, dessin n'aura de titre, je pense que le message sera suffisament évident pour ne me perdre en détails et superflu(x).
                     </p>
                     <button class="btn-1">
-                        <a href="artsenic.html">En savoir plus</a>
+                        <a href="about.html#artsenic">En savoir plus</a>
                     </button>
                 </div>
                 <div class="s1-imgs s3 wow animate__fadeInUp" data-wow-delay="0.3s">
@@ -303,7 +303,7 @@
                 </div>
                 <div class="s1-txt wow animate__fadeInUp" data-wow-delay="0.3s">
                     <h3 class="h3">
-                        // PROJETS
+                        // NEWS
                     </h3>
                     <h2 class="h2">
                         Divers outils de création
@@ -315,7 +315,7 @@
                         Découvrez mes projets persos touchant divers supports et outils créatifs.
                     </p>
                     <button class="btn-1">
-                        <a href="projets.html">En savoir plus</a>
+                        <a href="news.html">En savoir plus</a>
                     </button>
                 </div>
             </div>
@@ -345,19 +345,22 @@
             <div class="f-menu">
                 <h3 class="footer-h3">Menu</h3>
                 <ul>
-                    <a class="link" href="">
+                    <a class="link" href="index.html">
+                        <li>Accueil</li>
+                    </a>
+                    <a class="link" href="about.html">
                         <li>A propos</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Tableaux</li>
+                    <a class="link" href="gallerie.html">
+                        <li>Gallerie</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Artsenic</li>
+                    <a class="link" href="news.html">
+                        <li>News</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Projets</li>
+                    <a class="link" href="livredor.html">
+                        <li>Livre d'or</li>
                     </a>
-                    <a class="link" href="">
+                    <a class="link" href="contact.html">
                         <li>Contact</li>
                     </a>
                 </ul>
@@ -366,28 +369,22 @@
                 <h3 class="footer-h3">Collections de tableaux</h3>
                 <ul>
                     <a class="link" href="">
-                        <li>2020</li>
+                        <li>Annick</li>
                     </a>
                     <a class="link" href="">
-                        <li>2019</li>
-                    </a>
-                    <a class="link" href="">
-                        <li>2015-2017</li>
-                    </a>
-                    <a class="link" href="">
-                        <li>2011-2014</li>
+                        <li>Artsenic</li>
                     </a>
                 </ul>
             </div>
             <div class="f-gallery">
                 <h3 class="footer-h3">Galerie Photo</h3>
                 <div class="f-img-box">
-                    <img src="img/motard1.jpg" alt="">
-                    <img src="img/art1.jpeg" alt="">
-                    <img src="img/projet1.jpeg" alt="">
-                    <img src="img/projet2.jpeg" alt="">
-                    <img src="img/art2.jpeg" alt="">
-                    <img src="img/gallery4.jpeg" alt="">
+                    <a href="gallerie.html"><img src="img/motard1.jpg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/art1.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/projet1.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/projet2.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/art2.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/gallery4.jpeg" alt=""></a>
                 </div>
             </div>
         </div>
