--- a/livredor.html
+++ b/livredor.html
@@ -105,7 +105,7 @@
         </nav>
         <div class="hero-page"></div>
         <div class="title-page">
-            <h2>Contact</h2>
+            <h2>Livre d'or</h2>
             
         </div>
     </header>
@@ -113,7 +113,7 @@
         <div class="wrapper">
             <div class="contact-box wow animate__fadeInUp" data-wow-delay="0.1s">
                 <div class="contact-title">
-                    <h3>Contactez moi</h3>
+                    <h3>Laissez moi un message</h3>
                 </div>
                 <div class="contact-form">
                     <form class="contact-form" action="">
