--- a/news.html
+++ b/news.html
@@ -60,10 +60,10 @@
                         <a class="link" href="about.html">A propos</a>
                         <ul class="sub-menu">
                             <li>
-                                <a class="link" href="">Annick</a>
+                                <a class="link" href="about.html#annick">Annick</a>
                             </li>
                             <li>
-                                <a  class="link" href="">Artsenic</a>
+                                <a  class="link" href="about.html#artsenic">Artsenic</a>
                             </li>
                         </ul>
                     </li>
@@ -440,19 +440,22 @@
             <div class="f-menu">
                 <h3 class="footer-h3">Menu</h3>
                 <ul>
-                    <a class="link" href="">
+                    <a class="link" href="index.html">
+                        <li>Accueil</li>
+                    </a>
+                    <a class="link" href="about.html">
                         <li>A propos</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Tableaux</li>
+                    <a class="link" href="gallerie.html">
+                        <li>Gallerie</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Artsenic</li>
+                    <a class="link" href="news.html">
+                        <li>News</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Projets</li>
+                    <a class="link" href="livredor.html">
+                        <li>Livre d'or</li>
                     </a>
-                    <a class="link" href="">
+                    <a class="link" href="contact.html">
                         <li>Contact</li>
                     </a>
                 </ul>
@@ -461,33 +464,27 @@
                 <h3 class="footer-h3">Collections de tableaux</h3>
                 <ul>
                     <a class="link" href="">
-                        <li>2020</li>
+                        <li>Annick</li>
                     </a>
                     <a class="link" href="">
-                        <li>2019</li>
-                    </a>
-                    <a class="link" href="">
-                        <li>2015-2017</li>
-                    </a>
-                    <a class="link" href="">
-                        <li>2011-2014</li>
+                        <li>Artsenic</li>
                     </a>
                 </ul>
             </div>
             <div class="f-gallery">
                 <h3 class="footer-h3">Galerie Photo</h3>
                 <div class="f-img-box">
-                    <img src="img/motard1.jpg" alt="">
-                    <img src="img/art1.jpeg" alt="">
-                    <img src="img/projet1.jpeg" alt="">
-                    <img src="img/projet2.jpeg" alt="">
-                    <img src="img/art2.jpeg" alt="">
-                    <img src="img/gallery4.jpeg" alt="">
+                    <a href="gallerie.html"><img src="img/motard1.jpg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/art1.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/projet1.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/projet2.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/art2.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/gallery4.jpeg" alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
-
+    
     <script defer src="scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./plugins/wow.js/dist/wow.min.js"></script>
