--- a/about.html
+++ b/about.html
@@ -60,10 +60,10 @@
                         <a class="link" href="about.html">A propos</a>
                         <ul class="sub-menu">
                             <li>
-                                <a class="link" href="">Annick</a>
+                                <a class="link" href="about.html#annick">Annick</a>
                             </li>
                             <li>
-                                <a  class="link" href="">Artsenic</a>
+                                <a  class="link" href="about.html#artsenic">Artsenic</a>
                             </li>
                         </ul>
                     </li>
@@ -108,11 +108,60 @@
             <h2>A propos</h2>
         </div>
     </header>
-    <section>
         <div class="wrapper">
-
+            <div class="about-box" id="annick">       
+                <div class="wow animate__fadeInUp" data-wow-delay="0.1s">
+                    <div class="grid-imgs">
+                            <img class="grid-img-1" src="img/art1.jpeg" alt="">                             
+                            <img class="grid-img-2" src="img/art2.jpeg" alt="">
+                            <img class="grid-img-3" src="img/projet1.jpeg" alt="">
+                    </div>
+                </div>
+                <div class="s1-txt wow animate__fadeInUp" data-wow-delay="0.3s">
+                    <h3 class="h3">
+                        // A propos
+                    </h3>
+                    <h2 class="h2">
+                        Annick Van Endert
+                    </h2>
+                    <p class="paragraph">
+                        La vie "fête" de passions, de la couleur, des instants magiques, des rencontres fortuites, des folies créatrices, des rêves accomplis, des partages d'émotions, aimer, vibrer, toucher, agir...réagir, vivre sans oublier ses rêves, se perdre sans savoir si on retrouvera son chemin, respirer à s'en époumoner, vivre chaque instant comme si c'était le dernier.
+                    </p>
+                    <p class="paragraph">
+                        Bienvenue dans mon espace créatif
+                    </p>
+                    <p class="paragraph">
+                        La vie "fête" de passions, de la couleur, des instants magiques, des rencontres fortuites, des folies créatrices, des rêves accomplis, des partages d'émotions, aimer, vibrer, toucher, agir...réagir, vivre sans oublier ses rêves, se perdre sans savoir si on retrouvera son chemin, respirer à s'en époumoner, vivre chaque instant comme si c'était le dernier.
+                    </p>
+                </div>
+            </div>
+            <div class="about-box artscenic-about" id="artsenic">       
+                <div class="s1-txt s2 wow animate__fadeInUp" data-wow-delay="0.3s">
+                    <h3 class="h3">
+                        // A propos
+                    </h3>
+                    <h2 class="h2">
+                        Artsenic
+                    </h2>
+                    <p class="paragraph">
+                        La vie "fête" de passions, de la couleur, des instants magiques, des rencontres fortuites, des folies créatrices, des rêves accomplis, des partages d'émotions, aimer, vibrer, toucher, agir...réagir, vivre sans oublier ses rêves, se perdre sans savoir si on retrouvera son chemin, respirer à s'en époumoner, vivre chaque instant comme si c'était le dernier.
+                    </p>
+                    <p class="paragraph">
+                        Bienvenue dans mon espace créatif
+                    </p>
+                    <p class="paragraph">
+                        La vie "fête" de passions, de la couleur, des instants magiques, des rencontres fortuites, des folies créatrices, des rêves accomplis, des partages d'émotions, aimer, vibrer, toucher, agir...réagir, vivre sans oublier ses rêves, se perdre sans savoir si on retrouvera son chemin, respirer à s'en époumoner, vivre chaque instant comme si c'était le dernier.
+                    </p>
+                </div>
+                <div class="wow animate__fadeInUp" data-wow-delay="0.1s">
+                    <div class="grid-imgs">
+                            <img class="grid-img-1" src="img/artsenic1.jpeg" alt="">                             
+                            <img class="grid-img-2" src="img/artsenic2.jpeg" alt="">
+                            <img class="grid-img-3" src="img/artsenic3.jpg" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
     <div class="parrallax">
         <div class="parrallax-img"></div>
     </div>
@@ -136,19 +185,22 @@
             <div class="f-menu">
                 <h3 class="footer-h3">Menu</h3>
                 <ul>
-                    <a class="link" href="">
+                    <a class="link" href="index.html">
+                        <li>Accueil</li>
+                    </a>
+                    <a class="link" href="about.html">
                         <li>A propos</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Tableaux</li>
+                    <a class="link" href="gallerie.html">
+                        <li>Gallerie</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Artsenic</li>
+                    <a class="link" href="news.html">
+                        <li>News</li>
                     </a>
-                    <a class="link" href="">
-                        <li>Projets</li>
+                    <a class="link" href="livredor.html">
+                        <li>Livre d'or</li>
                     </a>
-                    <a class="link" href="">
+                    <a class="link" href="contact.html">
                         <li>Contact</li>
                     </a>
                 </ul>
@@ -157,28 +209,22 @@
                 <h3 class="footer-h3">Collections de tableaux</h3>
                 <ul>
                     <a class="link" href="">
-                        <li>2020</li>
+                        <li>Annick</li>
                     </a>
                     <a class="link" href="">
-                        <li>2019</li>
-                    </a>
-                    <a class="link" href="">
-                        <li>2015-2017</li>
-                    </a>
-                    <a class="link" href="">
-                        <li>2011-2014</li>
+                        <li>Artsenic</li>
                     </a>
                 </ul>
             </div>
             <div class="f-gallery">
                 <h3 class="footer-h3">Galerie Photo</h3>
                 <div class="f-img-box">
-                    <img src="img/motard1.jpg" alt="">
-                    <img src="img/art1.jpeg" alt="">
-                    <img src="img/projet1.jpeg" alt="">
-                    <img src="img/projet2.jpeg" alt="">
-                    <img src="img/art2.jpeg" alt="">
-                    <img src="img/gallery4.jpeg" alt="">
+                    <a href="gallerie.html"><img src="img/motard1.jpg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/art1.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/projet1.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/projet2.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/art2.jpeg" alt=""></a>
+                    <a href="gallerie.html"><img src="img/gallery4.jpeg" alt=""></a>
                 </div>
             </div>
         </div>
