--- a/gallerie.html
+++ b/gallerie.html
@@ -72,10 +72,10 @@
                         <a class="link" href="gallerie.html">Gallerie</a>
                         <ul class="sub-menu">
                             <li>
-                                <a class="link" href="">Annick</a>
+                                <a class="link" href="gallerie.html">Annick</a>
                             </li>
                             <li>
-                                <a class="link" href="">Artsenic</a>
+                                <a class="link" href="gallerie-artsenic.html">Artsenic</a>
                             </li>
                         </ul>
                     </li>
