--- a/gallerie-artsenic.html
+++ b/gallerie-artsenic.html
@@ -70,15 +70,17 @@
                     </li>
                     <li class="main-li">
                         <a class="link" href="gallerie.html">Gallerie</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a class="link" href="">Annick</a>
-                            </li>
-                            <li>
-                                <a class="link" href="">Artsenic</a>
-                            </li>
-                        </ul>
-                    </li>
+                        <li class="main-li">
+                            <a class="link" href="gallerie.html">Gallerie</a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a class="link" href="gallerie.html">Annick</a>
+                                </li>
+                                <li>
+                                    <a class="link" href="gallerie-artsenic.html">Artsenic</a>
+                                </li>
+                            </ul>
+                        </li>
                     <li class="main-li">
                         <a class="link" href="news.html">News</a>
                     </li>
@@ -181,12 +183,12 @@
                 </ul>
             </div>
             <div class="f-collection">
-                <h3 class="footer-h3">Collections de tableaux</h3>
+                <h3 class="footer-h3">Collections d'oeuvres</h3>
                 <ul>
-                    <a class="link" href="">
+                    <a class="link" href="gallerie.html">
                         <li>Annick</li>
                     </a>
-                    <a class="link" href="">
+                    <a class="link" href="gallerie-artsenic.html">
                         <li>Artsenic</li>
                     </a>
                 </ul>
