--- a/news.html
+++ b/news.html
@@ -71,10 +71,10 @@
                         <a class="link" href="gallerie.html">Gallerie</a>
                         <ul class="sub-menu">
                             <li>
-                                <a class="link" href="">Annick</a>
+                                <a class="link" href="gallerie.html">Annick</a>
                             </li>
                             <li>
-                                <a class="link" href="">Artsenic</a>
+                                <a class="link" href="gallerie-artsenic.html">Artsenic</a>
                             </li>
                         </ul>
                     </li>
@@ -461,12 +461,12 @@
                 </ul>
             </div>
             <div class="f-collection">
-                <h3 class="footer-h3">Collections de tableaux</h3>
+                <h3 class="footer-h3">Collections d'oeuvres</h3>
                 <ul>
-                    <a class="link" href="">
+                    <a class="link" href="gallerie.html">
                         <li>Annick</li>
                     </a>
-                    <a class="link" href="">
+                    <a class="link" href="gallerie-artsenic.html">
                         <li>Artsenic</li>
                     </a>
                 </ul>
@@ -484,7 +484,7 @@
             </div>
         </div>
     </footer>
-    
+
     <script defer src="scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./plugins/wow.js/dist/wow.min.js"></script>
