--- a/gallerie.html
+++ b/gallerie.html
@@ -106,7 +106,7 @@
         </nav>
         <div class="hero-page"></div>
         <div class="title-page">
-            <h2>Tableaux</h2>
+            <h2>Gallerie Annick</h2>
         </div>
 
     </header>
