--- a/gallerie-artsenic.html
+++ b/gallerie-artsenic.html
@@ -108,7 +108,7 @@
         </nav>
         <div class="hero-page"></div>
         <div class="title-page">
-            <h2>Tableaux</h2>
+            <h2>Gallerie Artsenic</h2>
         </div>
 
     </header>
