--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
         <div class="top-bar">
             <div class="breadcrumb">
                 <a class="link" href="index.html">Accueil</a>
-                <a class="link" href="tableaux.html">Séries de tableaux</a> 
-                <a class="link" href="artsenic.html">Artsenic</a>
+                <a class="link" href="gallerie.html">Séries de tableaux</a> 
+                <a class="link" href="gallerie-artsenic.html">Artsenic</a>
                 <a class="link" href="contact.html">Contact</a>
             </div>
             <div class="follow">
