responsive across the board

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             <div class="n-logo">
                 <h1>Annick</h1>
             </div>
+            <div class="burger">
+                <div class="bline"></div>
+                <div class="bline"></div>
+                <div class="bline"></div>
+            </div>
             <div class="n-nav">
                 <ul class="main-menu">
                     <li class="main-li">
@@ -105,6 +110,50 @@
                 </div>
             </div>
         </nav>
+        <div class="b-nav">
+            <div class="burger">
+                <div class="bline"></div>
+                <div class="bline"></div>
+                <div class="bline"></div>
+            </div>
+            <ul class="main-menu">
+                <li class="main-li">
+                    <a class="link" href="index.html">Accueil</a>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="about.html">A propos</a>
+                    <ul class="sub-menu">
+                        <li>
+                            <a class="link" href="about.html#annick">Annick</a>
+                        </li>
+                        <li>
+                            <a  class="link" href="about.html#artsenic">Artsenic</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="gallerie.html">Gallerie</a>
+                    <ul class="sub-menu">
+                        <li>
+                            <a class="link" href="gallerie.html">Annick</a>
+                        </li>
+                        <li>
+                            <a class="link" href="gallerie-artsenic.html">Artsenic</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="news.html">News</a>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="livredor.html">Livre d'or</a>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+        
         <!-- Slider main container -->
         <div class="swiper">
             <!-- Additional required wrapper -->
