--- a/gallerie.html
+++ b/gallerie.html
@@ -32,8 +32,8 @@
         <div class="top-bar">
             <div class="breadcrumb">
                 <a class="link" href="index.html">Accueil</a>
-                <a class="link" href="tableaux.html">Séries de tableaux</a> 
-                <a class="link" href="artsenic.html">Artsenic</a>
+                <a class="link" href="gallerie.html">Séries de tableaux</a> 
+                <a class="link" href="gallerie-artsenic.html">Artsenic</a>
                 <a class="link" href="contact.html">Contact</a>
             </div>
             <div class="follow">
@@ -51,6 +51,11 @@
         <nav>
             <div class="n-logo">
                 <h1>Annick</h1>
+            </div>
+            <div class="burger">
+                <div class="bline"></div>
+                <div class="bline"></div>
+                <div class="bline"></div>
             </div>
             <div class="n-nav">
                 <ul class="main-menu">
@@ -104,9 +109,53 @@
                 </div>
             </div>
         </nav>
+        <div class="b-nav">
+            <div class="burger">
+                <div class="bline"></div>
+                <div class="bline"></div>
+                <div class="bline"></div>
+            </div>
+            <ul class="main-menu">
+                <li class="main-li">
+                    <a class="link" href="index.html">Accueil</a>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="about.html">A propos</a>
+                    <ul class="sub-menu">
+                        <li>
+                            <a class="link" href="about.html#annick">Annick</a>
+                        </li>
+                        <li>
+                            <a  class="link" href="about.html#artsenic">Artsenic</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="gallerie.html">Gallerie</a>
+                    <ul class="sub-menu">
+                        <li>
+                            <a class="link" href="gallerie.html">Annick</a>
+                        </li>
+                        <li>
+                            <a class="link" href="gallerie-artsenic.html">Artsenic</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="news.html">News</a>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="livredor.html">Livre d'or</a>
+                </li>
+                <li class="main-li">
+                    <a class="link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+        
         <div class="hero-page"></div>
         <div class="title-page">
-            <h2>Gallerie Annick</h2>
+            <h2>Gallerie</h2>
         </div>
 
     </header>
