modifs about mobile

--- a/about.html
+++ b/about.html
@@ -184,7 +184,14 @@
                     </p>
                 </div>
             </div>
-            <div class="about-box artscenic-about" id="artsenic">       
+            <div class="about-box artscenic-about" id="artsenic">
+                <div class="wow animate__fadeInUp about-mobile" data-wow-delay="0.1s">
+                    <div class="grid-imgs">
+                            <img class="grid-img-1" src="img/artsenic1.jpeg" alt="">                             
+                            <img class="grid-img-2" src="img/artsenic2.jpeg" alt="">
+                            <img class="grid-img-3" src="img/artsenic3.jpg" alt="">
+                    </div>
+                </div>       
                 <div class="s1-txt s2 wow animate__fadeInUp" data-wow-delay="0.3s">
                     <h3 class="h3">
                         // A propos
@@ -202,7 +209,7 @@
                         La vie "fête" de passions, de la couleur, des instants magiques, des rencontres fortuites, des folies créatrices, des rêves accomplis, des partages d'émotions, aimer, vibrer, toucher, agir...réagir, vivre sans oublier ses rêves, se perdre sans savoir si on retrouvera son chemin, respirer à s'en époumoner, vivre chaque instant comme si c'était le dernier.
                     </p>
                 </div>
-                <div class="wow animate__fadeInUp" data-wow-delay="0.1s">
+                <div class="wow animate__fadeInUp about-desktop" data-wow-delay="0.1s">
                     <div class="grid-imgs">
                             <img class="grid-img-1" src="img/artsenic1.jpeg" alt="">                             
                             <img class="grid-img-2" src="img/artsenic2.jpeg" alt="">
