--- a/gallerie.html
+++ b/gallerie.html
@@ -186,7 +186,9 @@
                 <a href="img/gallery/gallery11.jpeg"><img data-filter="toile" src="img/gallery/gallery11.jpeg" alt=""></a>
                 <a href="img/gallery/gallery12.jpeg"><img data-filter="toile" src="img/gallery/gallery12.jpeg" alt=""></a>
                 <a href="img/gallery/gallery13.jpeg"><img data-filter="toile" src="img/gallery/gallery13.jpeg" alt=""></a>
-                <a href="img/gallery/gallery14.jpeg"><img data-filter="toile" src="img/gallery/gallery14.jpeg" alt=""></a>
+                <div class="gal-cont-img">
+                    <a href="img/gallery/gallery14.jpeg"><img data-filter="toile" src="img/gallery/gallery14.jpeg" alt=""></a>
+                </div>
                 <a href="img/gallery/gallery15.jpeg"><img data-filter="toile" src="img/gallery/gallery15.jpeg" alt=""></a>
                 <a href="img/gallery/gallery16.jpeg"><img data-filter="toile" src="img/gallery/gallery16.jpeg" alt=""></a>
                 <a href="img/gallery/gallery17.jpeg"><img data-filter="toile" src="img/gallery/gallery17.jpeg" alt=""></a>
