galerie structure pour titre en filigrane

--- a/gallerie.html
+++ b/gallerie.html
@@ -173,7 +173,12 @@
                 <button class="btn-1 gal" data-filter="2014">Divers</button>
             </div>
             <div class="gallery">
-                <a href="img/gallery/gallery1.jpeg"><img class="filtr-item" data-filter="toile" src="img/gallery/gallery1.jpeg" alt=""></a>
+                <div class="gal-cont-img">
+                    <a href="img/gallery/gallery1.jpeg">
+                        <img data-filter="toile" src="img/gallery/gallery1.jpeg" alt="">
+                        <div class="gal-titre"> Titre Titre titre titre</div>
+                    </a>     
+                </div>
                 <a href="img/gallery/gallery2.jpeg"><img data-filter="toile" src="img/gallery/gallery2.jpeg" alt=""></a>
                 <a href="img/gallery/gallery3.jpeg"><img data-filter="toile" src="img/gallery/gallery3.jpeg" alt=""></a>
                 <a href="img/gallery/gallery4.jpeg"><img data-filter="toile" src="img/gallery/gallery4.jpeg" alt=""></a>
@@ -187,7 +192,11 @@
                 <a href="img/gallery/gallery12.jpeg"><img data-filter="toile" src="img/gallery/gallery12.jpeg" alt=""></a>
                 <a href="img/gallery/gallery13.jpeg"><img data-filter="toile" src="img/gallery/gallery13.jpeg" alt=""></a>
                 <div class="gal-cont-img">
-                    <a href="img/gallery/gallery14.jpeg"><img data-filter="toile" src="img/gallery/gallery14.jpeg" alt=""></a>
+                    <a href="img/gallery/gallery14.jpeg">
+                        <img data-filter="toile" src="img/gallery/gallery14.jpeg" alt="">
+                        <div class="gal-titre"> Titre Titre titre titre</div>
+                    </a>
+                    
                 </div>
                 <a href="img/gallery/gallery15.jpeg"><img data-filter="toile" src="img/gallery/gallery15.jpeg" alt=""></a>
                 <a href="img/gallery/gallery16.jpeg"><img data-filter="toile" src="img/gallery/gallery16.jpeg" alt=""></a>
